deploy/k8s/nodeports/Samples/helloworld-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-service
  labels:
    app: helloworld-service
spec:
  type: NodePort
  ports:           # other during autodiscover phase for cluster creation.
   - name: http    # A ClusterIP will prevent resolving dns requests for other pods
     protocol: TCP # under the same service.
     port: 8081
     targetPort: 80
   
  selector:
    app: helloworld-deployment
---
   
        
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-deployment
  labels:
    app: helloworld-deployment
spec:
  replicas: 1
  template:
    metadata:
      name: helloworld
      labels:
        app: helloworld-deployment
    spec:
      containers:
      - name: helloworld
        image: tutum/hello-world
        imagePullPolicy: IfNotPresent
        ports:
          - name: http
            protocol: TCP
            containerPort: 80
      restartPolicy: Always
  selector:
    matchLabels:
      app: helloworld-deployment
