deploy/k8s/nodeports/Samples/echo-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echomap
  annotations: {
    'kubernetes.io/ingress.class': nginx
  }
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /foo
        backend:
          serviceName: echoheaders
          servicePort: 80
