deploy/k8s/nodeports/Samples/hellomq-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hellomq-ingress
  annotations: {
    'kubernetes.io/ingress.class': nginx,
    
    'nginx.ingress.kubernetes.io/rewrite-target': /  # https://github.com/helm/charts/issues/10751
  }
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /hellomq
        backend:
          serviceName: hellomq-service
          servicePort: 15672
