deploy/k8s/nodeports/Samples/helloworld-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: helloworld-ingress
  annotations: {
    'kubernetes.io/ingress.class': nginx
  }
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /helloworld
        backend:
          serviceName: helloworld-service
          servicePort: 8081
